// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot with multiple suites 1`] = `
<div
  className="container"
>
  <div
    className="text-right"
  >
    <a
      className="btn btn-primary"
      href="/?group=true"
      role="button"
      title="Click to group results by environment"
    >
      Group
    </a>
  </div>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h3
        className="text-center"
      >
        suite-name
      </h3>
      <div
        className="ct-chart"
        id="chart1"
      />
      <p
        className="text-center chart-label"
      >
        <a
          href="/1"
        >
          Total: 
          110
        </a>
      </p>
      <p
        className="text-center text-muted"
      >
        <small>
          3 months ago
        </small>
      </p>
    </div>
    <div
      className="col-4"
    >
      <h3
        className="text-center"
      >
        second-suite-name
      </h3>
      <div
        className="ct-chart"
        id="chart2"
      />
      <p
        className="text-center chart-label"
      >
        <a
          href="/2"
        >
          Total: 
          100
        </a>
      </p>
      <p
        className="text-center text-muted"
      >
        <small>
          in 10 months
        </small>
      </p>
    </div>
  </div>
</div>
`;

exports[`snapshot with single grouped suite 1`] = `
<div
  className="container"
>
  <div
    className="text-right"
  >
    <a
      className="btn btn-outline-primary"
      href="/"
      role="button"
      title="Click to ungroup results"
    >
      Ungroup
    </a>
  </div>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h3
        className="text-center"
      >
        grouped-suite-name
      </h3>
      <div
        className="ct-chart"
        id="chart1"
      />
      <p
        className="text-center chart-label"
      >
        <a
          href="/1?group=true"
        >
          Total: 
          300
        </a>
      </p>
      <p />
    </div>
  </div>
</div>
`;

exports[`snapshot with single suite 1`] = `
<div
  className="container"
>
  <div
    className="text-right"
  >
    <a
      className="btn btn-primary"
      href="/?group=true"
      role="button"
      title="Click to group results by environment"
    >
      Group
    </a>
  </div>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <h3
        className="text-center"
      >
        suite-name
      </h3>
      <div
        className="ct-chart"
        id="chart1"
      />
      <p
        className="text-center chart-label"
      >
        <a
          href="/1"
        >
          Total: 
          110
        </a>
      </p>
      <p
        className="text-center text-warning"
      >
        <small>
          running...
        </small>
      </p>
    </div>
  </div>
</div>
`;

exports[`snapshot with zero suites 1`] = `
<div
  className="container"
>
  <div
    className="text-right"
  >
    <a
      className="btn btn-primary"
      href="/?group=true"
      role="button"
      title="Click to group results by environment"
    >
      Group
    </a>
  </div>
  <div
    className="row"
  />
</div>
`;
